Fix error not showing last project details on mobile devices. Minor fixes

--- a/styles/index.css
+++ b/styles/index.css
@@ -184,11 +184,19 @@ a {
 }
 
 .project:nth-child(1) {
-  z-index: 100;
+  z-index: 90;
 }
 
 .project:nth-child(2) {
-  z-index: 10;
+  z-index: 70;
+}
+
+.project:nth-child(3) {
+  z-index: 50;
+}
+
+.project:nth-child(4) {
+  z-index: 30;
 }
 
 .project img {
